--- a/abdo-portfolio/package.json
+++ b/abdo-portfolio/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@tabler/icons-react": "^3.24.0",
     "@types/react-scroll": "^1.8.10",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
