--- a/mulba-e-commerce/package.json
+++ b/mulba-e-commerce/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typegen": "pnpm dlx sanity@latest schema extract && pnpm dlx sanity@latest typegen generate"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.6",
@@ -20,13 +21,21 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@sanity/icons": "^3.5.7",
+    "@sanity/image-url": "1",
+    "@sanity/vision": "3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "install": "^0.13.0",
     "lucide-react": "^0.469.0",
+    "motion": "^11.15.0",
     "next": "15.1.3",
+    "next-sanity": "9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sanity": "3",
+    "styled-components": "6",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
